syntax = "proto3";
package kvs;

// Key defines a simple key in the KVS.
message Key{
  string name = 1;
}

// Value represents a share in CGSS.
message Value{
  string field = 1;
  string group_key = 2;
  repeated string group_shares = 3;
  string data_key = 4;
  repeated string data_shares = 5;
}

// Entry defines a pair of key and value as an entry in the KVS.
message Entry{
  Key key = 1;
  Value value = 2;
}

// Define empty requests/responses.
message PutResponse{}
message DeleteResponse{}
message ListRequest{}

// Define the KVS service.
service Kvs{
  rpc Get(Key) returns (Value){}
  rpc Put(Entry) returns (PutResponse){}
  rpc Delete(Key) returns (DeleteResponse){}
  rpc List(ListRequest) returns (stream Key){}
}
